<resources>
    <string name="app_name">LoginWithAnimation</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="logout">Keluar</string>
    <string name="judul">Judul story</string>
    <string name="deskrip">Deskripsi story</string>
    <string name="dicoding">Dicoding Berita dan Cerita</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="description_story">Masukan Deskripsi Cerita</string>
    <string name="empty_image_warning">"Gambar Kosong "</string>
    <string name="name">Nama</string>
    <string name="password_error">Password tidak boleh kurang dari 8 karakter Password must not be less than 8 characters</string>
    <string name="upload">Unggah</string>
    <string name="logout_message">Yakin ingin keluar ?</string>
    <string name="yes">Ya</string>
    <string name="success_dialog_message">Akun dengan %1$s sudah jadi nih. Yuk, login dan belajar coding.</string>
    <string name="success_dialog_title">Yeah!</string>
    <string name="success_dialog_button">Lanjut</string>
    <string name="registration_failed">Registrasi Gagal</string>
    <string name="failure_dialog_title">" Oh tidak!"</string>
    <string name="try_again">Silahkan coba lagi.</string>
    <string name="failure_dialog_button">Registrasi Ulang</string>
    <string name="login_success">login Berhasil</string>
    <string name="login_failed">Login Gagal</string>
    <string name="upload_success">Upload Berhasil</string>
    <string name="upload_failure">Upload Gagal</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="location_enabled">Anda sedang melihat berita dan cerita sekitar lokasi anda</string>
    <string name="location_disabled">Anda sedang melihat berita dan cerita di mana saja</string>
    <string name="location_now">Pilih untuk mengganti lokasi</string>
    <string name="togglebutton" translatable="false">ToggleButton</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="normal_type" translatable="false">Normal</string>
    <string name="satellite_type" translatable="false">Satellite</string>
    <string name="terrain_type" translatable="false">Terrain</string>
    <string name="hybrid_type" translatable="false">Hybrid</string>
    <string name="Location_with">Kirim Dengan Lokasi</string>
    <string name="location_error">Lokasi tidak ditemukan</string>

</resources>